--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -57,6 +57,18 @@ gemContainer:
       gemType: ComponentGem
       dependencies: null
       createdAt: '2025-10-22 06:25:41'
+    gems/newGem_custom:
+      name: newGem_custom
+      category: Custom
+      subCategory: ''
+      description: null
+      author: ayush.779gupta@gmail.com
+      mode: batch
+      files:
+      - gayushprophecyioteam_tickettestimport1/gems/newGem_custom.py
+      gemType: ComponentGem
+      dependencies: null
+      createdAt: '2025-10-22 07:10:49'
   dependencies: null
 functions:
   author: null
