--- a/pbt_project.yml
+++ b/pbt_project.yml
@@ -69,6 +69,18 @@ gemContainer:
       gemType: ComponentGem
       dependencies: null
       createdAt: '2025-10-22 07:10:49'
+    gems/gem_400:
+      name: gem_400
+      category: Custom
+      subCategory: ''
+      description: null
+      author: ayush.779gupta@gmail.com
+      mode: batch
+      files:
+      - gayushprophecyioteam_tickettestimport1/gems/gem_400.py
+      gemType: ComponentGem
+      dependencies: null
+      createdAt: '2025-10-22 07:47:18'
   dependencies: null
 functions:
   author: null
